Fix social icons spacing

--- a/Helax/assets/css/main.css
+++ b/Helax/assets/css/main.css
@@ -6529,8 +6529,10 @@ blockquote {
 @media (max-width: 991px) {
   .footer__cta-social {
     justify-content: start; } }
+.footer__cta-social {
+  gap: 20px; }
 .footer__cta-social li:not(:first-child) {
-  margin-left: 24px; }
+  margin-left: 0; }
 .footer__cta-social li a {
   width: 48px;
   height: 48px;
